--- a/mypersiankitchen/package.json
+++ b/mypersiankitchen/package.json
@@ -23,7 +23,8 @@
     "@sanity/vision": "^2.7.3",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "sanity": "^2.20.0"
   },
   "devDependencies": {}
 }
