--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "create-react-app": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazy-blur-image": "^0.1.2",
